halved the size of the photo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!-- Main container -->
 <div class="main-container">
     <aside class="sidebar">
-        <img class="my-photo" src="./img/photo5220174243529076938.jpg" alt="My photo">
+        <img class="my-photo" src="./img/photo5220174243529076938.jpg" width="426" height="640" alt="My photo">
         <div>
         <!--contacts container-->
         <div class="contacts-container">
